# SimpleRender

./: .gitignore  CMakeLists.txt  README.md
include/common/: types.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/shaders/: basic.frag
src/: Application.cpp  Application.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  main.cpp
src/core/: Application.cpp  Application.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp
src/rendering/: Camera.cpp  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  Light.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SimpleGUI.cpp  SimpleGUI.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp
src/rendering/buffers/: IndexBuffer.cpp  IndexBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/scene/: GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp
src/utils/: FPSCounter.cpp  FPSCounter.hpp  FileSystem.cpp  FileSystem.hpp  Logger.cpp  Logger.hpp
